# mcp-benchmark-stack

./: .env.example  README.md  pyproject.toml
client/: __main__.py  benchmark_client.py  policy_baselines.py
evidence/logs/: S10_20260315_214352.json  S10_20260315_220445.json  S10_20260315_223452.json  S10_20260315_224519.json  S10_20260316_011917.json  S11_20260315_223450.json  S11_20260315_224518.json  S11_20260316_011916.json  S12_20260315_223451.json  S12_20260315_224518.json  S12_20260316_011916.json  S1_20260315_214347.json  S1_20260315_220442.json  S1_20260315_223447.json  S1_20260315_224515.json  S1_20260316_011913.json  S2_20260315_214347.json  S2_20260315_220442.json  S2_20260315_223447.json  S2_20260315_224515.json  S2_20260316_011913.json  S3_20260315_214348.json  S3_20260315_220442.json  S3_20260315_223447.json  S3_20260315_224515.json  S3_20260316_011914.json  S4_20260315_214349.json  S4_20260315_220443.json  S4_20260315_223448.json  S4_20260315_224516.json  S4_20260316_011914.json  S5_20260315_214350.json  S5_20260315_220443.json  S5_20260315_223448.json  S5_20260315_224516.json  S5_20260316_011915.json  S6_20260315_214350.json  S6_20260315_220443.json  S6_20260315_223449.json  S6_20260315_224516.json  (+21 more)
evidence/results/: baseline_comparison_20260315_220445.json  baseline_comparison_20260315_223452.json  baseline_comparison_20260316_011917.json  metrics_20260315_214352.json  (+23 more)
sandbox/: hello.txt
scenarios/: scenarios.yaml
scripts/: run_auth_http.sh  run_benchmark.sh  run_conformance.sh  run_fetch_http.sh  run_file_stdio.sh
tests/: test_benchmark.py
(+41 files in other folders)
